@@ -24,19 +24,19 @@ class PanelizerTestHelper extends DrupalWebTestCase {
    * Helper function to quickly enable or disable Panelizer for an entity type.
    *
    * @param string $entity_type
-   *   The entity type to configure
+   *   The entity type to configure, defaults to 'node'.
    * @param string $bundle
-   *   The entity bundle to enable.
+   *   The entity bundle to enable, defaults to 'page'.
    * @param boolean $status
-   *   Indicate whther the view mode is enabled or disabled.
+   *   Indicate whther the view mode is enabled or disabled; defaults to TRUE.
    * @param boolean $use_default
-   *   Whether to enable a default display; defaults to FALSE.
+   *   Whether to enable a default display; defaults to TRUE.
    * @param boolean $choice
-   *   Whether to enable a display choice may be made; defaults to FALSE.
+   *   Whether to enable a display choice may be made; defaults to TRUE.
    * @param string $view_mode
    *   The entity view mode to be panelized; defaults to 'page_manager'.
    */
-  protected function togglePanelizer($entity_type, $bundle, $status = 1, $use_default = 0, $choice = 0, $view_mode = 'page_manager') {
+  protected function togglePanelizer($entity_type = 'node', $bundle = 'page', $status = 1, $use_default = 1, $choice = 1, $view_mode = 'page_manager') {
     variable_set('panelizer_defaults_' . $entity_type . '_' . $bundle, array(
       'status' => 1,
       'help' => '',
@@ -221,6 +221,42 @@ class PanelizerTestHelper extends DrupalWebTestCase {
       // @todo Dependent upon https://www.drupal.org/node/2750545.
       // $this->assertNotEqual($pane->uuid, $panes2[$key]->uuid);
     }
+  }
+
+  /**
+   * Get the {panelizer_entity} records exist for an entity.
+   *
+   * @param string $entity_type
+   *   The entity type to check.
+   * @param int $entity_id
+   *   The entity's primary ID.
+   * @param int $revision_id
+   *   The entity's revision ID.
+   *
+   * @return array
+   *   The records that were found.
+   */
+  function getPanelizerEntityRecords($entity_type, $entity_id, $revision_id = NULL) {
+    $query = db_select('panelizer_entity', 'pe')
+      ->fields('pe')
+      ->condition('entity_type', $entity_type);
+
+    // If the revision ID was passed in, use it, otherwise use the entity ID.
+    if (!empty($revision_id)) {
+      $query->condition('revision_id', $revision_id);
+    }
+    else {
+      $query->condition('entity_id', $entity_id);
+    }
+
+    $records = $query->orderBy('pe.revision_id')
+      ->execute()
+      ->fetchAll();
+
+    // Debug output, for local testing.
+    $this->verbose('<pre>' . print_r($records, TRUE) . '</pre>');
+
+    return $records;
   }
 
 }
