@@ -99,6 +99,8 @@ By DamienMcKenna: Minor refactoring to node revision tests.
 #2404999 by DamienMcKenna, joegraduate: Don't save {panelizer_entity} records if
   the display is using a default.
 #2756435 by DamienMcKenna: Test cleanups.
+#2713191 by DamienMcKenna: Added tests to verify Pathauto-set aliases do not
+  disappear after a Panelizer display is modified.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
